// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Breadcrumb ActiveBreadcrumbs smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

.emotion-25 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-25:hover {
  color: #103fab;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <ol
              aria-label="Breadcrumb"
              class="emotion-3"
            >
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/first-level"
                  >
                    Level 1
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/second-level"
                  >
                    Level 2
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/third-level"
                  >
                    Level 3
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/forth-level"
                  >
                    Level 4
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-24"
                >
                  <a
                    class="emotion-25"
                    href="/fifth-level"
                  >
                    Level 5
                  </a>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Breadcrumb ActiveBreadcrumbsWithInactiveLastBreadcrumb smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <ol
              aria-label="Breadcrumb"
              class="emotion-3"
            >
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/first-level"
                  >
                    Level 1
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/second-level"
                  >
                    Level 2
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/third-level"
                  >
                    Level 3
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <a
                    class="emotion-5"
                    href="/forth-level"
                  >
                    Level 4
                  </a>
                  <span
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        class="emotion-8"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-24"
                >
                  <div>
                    Level 5
                  </div>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Breadcrumb BreadcrumbShowcaseStory smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

.emotion-25 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-25:hover {
  color: #103fab;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <button
                style="margin-bottom: 16px;"
                type="button"
              >
                Add data to Breadcrumb
              </button>
              <ol
                aria-label="Breadcrumb"
                class="emotion-3"
              >
                <li>
                  <div
                    class="emotion-4"
                  >
                    <a
                      class="emotion-5"
                      href="/first-level"
                    >
                      Level 1
                    </a>
                    <span
                      class="emotion-6"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-8"
                          fill="none"
                          viewBox="0 0 6 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                            fill="#0E0E17"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
                <li>
                  <div
                    class="emotion-4"
                  >
                    <a
                      class="emotion-5"
                      href="/second-level"
                    >
                      Level 2
                    </a>
                    <span
                      class="emotion-6"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-8"
                          fill="none"
                          viewBox="0 0 6 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                            fill="#0E0E17"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
                <li>
                  <div
                    class="emotion-4"
                  >
                    <a
                      class="emotion-5"
                      href="/third-level"
                    >
                      Level 3
                    </a>
                    <span
                      class="emotion-6"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-8"
                          fill="none"
                          viewBox="0 0 6 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                            fill="#0E0E17"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
                <li>
                  <div
                    class="emotion-4"
                  >
                    <a
                      class="emotion-5"
                      href="/forth-level"
                    >
                      Level 4
                    </a>
                    <span
                      class="emotion-6"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-8"
                          fill="none"
                          viewBox="0 0 6 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                            fill="#0E0E17"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
                <li>
                  <div
                    class="emotion-24"
                  >
                    <a
                      class="emotion-25"
                      href="/fifth-level"
                    >
                      Level 5
                    </a>
                  </div>
                </li>
              </ol>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Breadcrumb SimpleBreadcrumbs smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <ol
              aria-label="Breadcrumb"
              class="emotion-3"
            >
              <li>
                <div
                  class="emotion-4"
                >
                  <div>
                    Level 1
                  </div>
                  <span
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-4"
                >
                  <div>
                    Level 2
                  </div>
                  <span
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        fill="none"
                        viewBox="0 0 6 12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853554 11.1464C0.538571 11.4614 0 11.2383 0 10.7929L0 1.20711C0 0.761654 0.538571 0.53857 0.853553 0.853553L5.64645 5.64645C5.84171 5.84171 5.84171 6.15829 5.64645 6.35355L0.853554 11.1464Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
              <li>
                <div
                  class="emotion-12"
                >
                  <div>
                    Level 3
                  </div>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
